<resources>
    <string name="app_name">Products</string>

    <!-- Label for overflow menu option that inserts sample product data into the app [CHAR LIMIT=20] -->
    <string name="action_insert_sample_data">Insert Sample Data</string>

    <!-- Label for overflow menu option that deletes all pet data in the app [CHAR LIMIT=20] -->
    <string name="action_delete_all_entries">Delete All Products</string>

    <!-- Title for the activity to add a new product [CHAR LIMIT=20] -->
    <string name="editor_activity_title_new_product">Add a Product</string>

    <!-- Title for the activity to edit existing product [CHAR LIMIT=20] -->
    <string name="editor_activity_title_edit_product">Edit Product</string>

    <!-- Label for editor menu option to save product and leave editor [CHAR LIMIT=20] -->
    <string name="action_save">Save</string>

    <!-- Label for editor overflow menu option that deletes the current product [CHAR LIMIT=20] -->
    <string name="action_delete">Delete</string>

    <!-- Label for product name category of attributes in the editor [CHAR LIMIT=30] -->
    <string name="category_product_name">Product</string>

    <!-- Label for quantity information in the editor [CHAR LIMIT=30] -->

    <string name="category_current_quantity">Quantity</string>

    <!-- Label for Save quantity Button-->
    <string name="update_quantity_button">update</string>

    <!-- Label for Increment quantity Button-->
    <string name="increment_quantity_button">+</string>

    <!-- Label for Decrement quantity Button-->
    <string name="decrement_quantity_button">-</string>

    <!-- Label for Increment quantity Button-->
    <string name="increment_order_quantity_button">+</string>

    <!-- Label for Order quantity text view-->
    <string name="order_quantity_text_view">0</string>

    <!-- Label for Decrement quantity Button-->
    <string name="decrement_order_quantity_button">-</string>

    <!-- Label for Save quantity Button-->
    <string name="order_quantity_button">order</string>

    <!-- Label for order information in the editor [CHAR LIMIT=30] -->
    <string name="category_image">Image</string>

    <!-- Label for supplier information in the editor [CHAR LIMIT=30] -->
    <string name="category_supplier">Supplier</string>

    <!-- Label for editing image information in the editor [CHAR LIMIT=30] -->
    <string name="edit_image">Add Image</string>

    <!-- Label for Select Image Button-->
    <string name="select_image_button">Gallery</string>

    <!-- Label for Select Image Button-->
    <string name="take_picture_button">Camera</string>

    <!-- Label for Sell button -->
    <string name="sell_one_button">Sell 1</string>

    <!-- Toast message for Sell 1 action if quantity is > 0 -->
    <string name="sell_one_result_toast">Sold 1</string>

    <!-- Toast message for Sell 1 action if quantity == 0 -->
    <string name="quantity_is_zero_result_toast">Out of Stock</string>

    <!-- Label for order information in the editor [CHAR LIMIT=30] -->
    <string name="category_order">Order</string>

    <!-- Label for quantity information in the editor [CHAR LIMIT=30] -->
    <string name="category_sell">Sell</string>

    <!-- Label for price information in the editor [CHAR LIMIT=30] -->
    <string name="category_price">Price</string>

    <!-- Text hint for product name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_product_name">Product name</string>

    <!-- Text hint for product name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_supplier">Enter supplier</string>

    <!-- Text hint for product quantity field in the editor [CHAR LIMIT=30] -->
    <string name="hint_product_quantity">0</string>

    <!-- Text hint for price field in the editor [CHAR LIMIT=30] -->
    <string name="hint_price">0.00</string>

    <!-- Units for price (kilograms) [CHAR LIMIT=5] -->
    <string name="unit_product_price">dollars</string>

    <!-- Toast message in editor when name entered for product already exists [CHAR LIMIT=NONE] -->
    <string name="product_exists_message">Product already exists</string>

    <!-- Toast message in editor for incomplete field(s) [CHAR LIMIT=NONE] -->
    <string name="required_fields_message">All fields are required</string>

    <!-- Toast message in editor for incomplete field(s) [CHAR LIMIT=NONE] -->
    <string name="invalid_entry_message">Please complete all fields</string>

    <!-- Toast message in editor when new product has been successfully inserted [CHAR LIMIT=NONE] -->
    <string name="editor_insert_product_successful">Product saved</string>

    <!-- Toast message in editor when new product has failed to be inserted [CHAR LIMIT=NONE] -->
    <string name="editor_insert_product_failed">Error saving product</string>

    <!-- Toast message in editor when an a price is not entered or it is invalid.-->
    <string name="enter_valid_price">Please enter a valid price</string>

    <!-- Toast message in editor when new product has been successfully inserted [CHAR LIMIT=NONE] -->
    <string name="editor_update_product_successful">Product update successful</string>

    <!-- Toast message in editor when new product has failed to be inserted [CHAR LIMIT=NONE] -->
    <string name="editor_update_product_failed">Error updating product</string>

    <!-- Title text for the empty view, which describes the empty inventory image [CHAR LIMIT=50] -->
    <string name="empty_view_title_text">Add products</string>

    <!-- Subtitle text for the empty view that prompts the user to add a product [CHAR LIMIT=50] -->
    <string name="empty_view_subtitle_text">Get started by adding a product</string>

    <!-- Dialog message when user wants to delete all products in CategoryActivity [CHAR LIMIT=NONE] -->
    <string name="delete_all_products_one_dialog_msg">Do you want to delete all products?</string>

    <!-- Dialog message warning user that ALL products will be deleted [CHAR LIMIT=NONE] -->
    <string name="delete_all_products_two_dialog_msg">Delete all products</string>

    <!-- Dialog message to confirm deletion of all products in CategoryActivity [CHAR LIMIT=NONE] -->
    <string name="confirm_all_products_delete">Delete all</string>

    <!-- Dialog message to cancel deletion of all products in CategoryActivity [CHAR LIMIT=NONE] -->
    <string name="confirm_cancel_dialog_msg">Cancel</string>

    <!-- Dialog message when user is leaving editor but hasn't saved changes [CHAR LIMIT=NONE] -->
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>

    <!-- Dialog button text for the option to discard a user's changes [CHAR LIMIT=20] -->
    <string name="discard">Discard</string>

    <!-- Dialog button text for the option to keep editing the current product [CHAR LIMIT=20] -->
    <string name="keep_editing">Keep Editing</string>

    <!-- Dialog button text for the option to keep editing the current product [CHAR LIMIT=20] -->
    <string name="keep_changes">Save changes</string>

    <!-- Toast message in editor when current product was successfully deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_product_successful">Product deleted</string>

    <!-- Toast message in editor when current product has failed to be deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_product_failed">Error with deleting product</string>

    <!-- Dialog message to ask the user to confirm deleting the current product [CHAR LIMIT=NONE] -->
    <string name="delete_dialog_msg">Delete this product?</string>

    <!-- Dialog button text for the option to confirm deleting the current product [CHAR LIMIT=20] -->
    <string name="delete">Delete</string>

    <!-- Dialog button text for the option to cancel deletion of the current product [CHAR LIMIT=20] -->
    <string name="cancel">Cancel</string>

</resources>
